--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -46,7 +46,7 @@
             <% end %>
 
             <div class="right show-on-medium-and-down">
-              <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+              <a href="#" data-target="mobile-menu" class="sidenav-trigger"><i class="material-icons">menu</i></a>
             </div>
 
             <ul class="right hide-on-med-and-down">
@@ -94,7 +94,7 @@
       </div>
 
       <div class="row">
-        <ul class="sidenav" id="mobile-demo">
+        <ul class="sidenav" id="mobile-menu">
         <%= link_to root_path, class:"logo" do %>
                 <%= image_tag("logo_2.svg", :alt => "logo") %>
                 <div>Cat Linker</div>
