--- a/app/views/shared/_contact_form.html.erb
+++ b/app/views/shared/_contact_form.html.erb
@@ -7,6 +7,8 @@
   <div class="row">
     <div class="col s12 l7">
       <%= form_with(model: @message, url: messages_path) do |f| %>
+        <%= recaptcha_v3(action: 'contact', turbolinks: true) %>
+
         <div class="row">
           <br>
         </div>
