--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -4,7 +4,10 @@
       <h2 class="form-title"><%= t('form.new_registration.sign_up') %></h2>
     </div>
 
-    <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+    <%= form_for(resource, as: resource_name, url: registration_path(resource_name), action: :create) do |f| %>
+
+      <%= recaptcha_v3(action: 'registration', turbolinks: true) %>
+
       <div class="row">    
         <br>   
       </div>
@@ -82,5 +85,11 @@
     <% end %>
 
     <%= render "devise/shared/links" %>
+
+    <div class="grecaptcha-disclaimer">
+      This site is protected by reCAPTCHA and the Google
+      <a href="https://policies.google.com/privacy">Privacy Policy</a> and
+      <a href="https://policies.google.com/terms">Terms of Service</a> apply.
+    </div>
   </div>
 </div>
