--- a/app/views/home/cookies_policy.html.erb
+++ b/app/views/home/cookies_policy.html.erb
@@ -1,1 +1,49 @@
-<h1>Cookies policy</h1>
+<div class="container legal-document">
+  <div class="row">
+    <h1>Cookies policy</h1>
+    <h4 class="timestamp">Last updated 8 April 2020</h4>
+  </div>
+  
+  <div class="section">
+    <div class="row">
+      <h4>What are cookies?</h4>
+      <p>
+        Cookies are small text files which are downloaded to your computer, tablet or mobile phone when you visit a website or application. The website or application may retrieve these cookies from your web browser (eg Internet Explorer, Mozilla Firefox or Google Chrome) each time you visit, so they can recognise you, remember your preferences and provide you with a more secure online experience.
+        Generally, cookies are very useful and are a common method used by almost every website you visit because they help to make your online experience as smooth as possible. For security reasons, many websites will not function at all without the use of cookies (or other similar technologies, such as "web beacons" or "tags").
+        Cookies generally do not hold any information to identify an individual person, but are instead used to identify a browser on an individual machine.
+        If you prefer, you can restrict, block or delete cookies by changing your browser settings but that may mean that the website won't work properly
+        For more information about cookies and their impact on you and your browsing visit <%= link_to "www.aboutcookies.org", "http://www.aboutcookies.org", target:"_blank", class:"inline-link" %>.
+      </p>
+    </div>
+  </div>
+  <div class="section">
+    <div class="row">
+      <h4>Types of cookies we use</h4>
+      <h5>Necessary cookies</h5>
+      <p>
+        These cookies are essential in helping you to make use of the features and services we offer on Cat Linker. Without these cookies, the services you want to use cannot be provided. These cookies do not gather information about you that could be used to identify you, and they do not monitor or remember where you have been on the internet.
+      </p>
+      <h5>Functional cookies</h5>
+      <p>
+        These cookies allow us to provide you with a better online experience when you use our website. They do not gather or store any information which would allow us to identify you personally.
+      </p>
+      <h5>Performance cookies</h5>
+      <p>
+        Performance cookies help us to understand how our customers use our site, so we can keep our products and services relevant, easy to use and up to date. For example, we can see which products and services are most popular, identify when and where errors occur, and test different versions of a page in order to provide an improved online experience.
+      </p>
+      <p>
+        Sometimes, the services we use to collect this information may be operated by other companies on our behalf. They may use similar technologies to cookies, known as "web beacons" or "tags". These are anonymous and, as they are only used for statistical purposes, they do not contain or collect any information that identifies you.
+      </p>
+    </div>
+  </div>
+  <div class="section">
+    <div class="row">
+      <h4>Managing cookies</h4>
+      <p>
+        Most internet browsers allow you to erase cookies from your computer hard drive, block all cookies (or just third-party cookies) or warn you before a cookie is stored on your device.
+        Please note, if you choose to block all cookies, our site will not function as intended and you will not be able to use or access many of the services we provide. If you have blocked all cookies and wish to make full use of the features and services we offer, you will need to enable your cookies. You can do this in your browser (see below).
+        Rather than blocking all cookies, you can choose to only block third-party cookies which will still allow our website to function as intended.
+      </p>
+    </div>
+  </div>
+</div>
