--- a/app/views/home/privacy_policy.html.erb
+++ b/app/views/home/privacy_policy.html.erb
@@ -1,1 +1,209 @@
-<h1>Privacy policy</h1>
+<div class="container legal-document">
+  <div class="row">
+    <h1>Privacy Policy</h1>
+    <h4 class="timestamp">Last updated 9 April 2020</h4>
+  </div>
+  <div class="section">
+    <div class="row">
+      <h4>Information that we collect</h4>
+      <p>
+        We collect information to provide better services to all our users.
+        The information Cat Linker collects, and how that information is used, depends on how you use our services.
+      </p>
+      <p>
+        When you’re not signed in to a Cat Linker Account, we store the information that we collect with unique identifiers tied to the browser, application or device that you’re using.
+        This helps us do things such as store your cookie consent as well as providing security measures during your visits.
+      </p>
+      <p> 
+        When you’re signed in, we also collect information that we store with your Cat Linker Account, which we treat as personal information.
+      </p>
+      <p>
+        When you create a Cat Linker Account, you provide us with personal information that includes your email address and a password.
+        Optionally, you can also add the address of your cattery, phone number and other information related to your cattery.
+        We also collect the content that you upload when using our services.
+      </p>
+    </div>
+  </div>
+  <div class="section">
+    <div class="row">
+      <h4>Data that we use to provide our services</h4>
+      <p>
+        We use your information to deliver our services, such as processing the terms you search for in order to return results and we use unique identifiers stored in cookies on your device to help us authenticate you as the person who should have access to your Cat Linker Account.
+      </p>
+      <p>
+        We also use your information to ensure that our services are working as intended, such as tracking outages or troubleshooting issues that you report to us. And we use your information to make improvements to our services such as using community feedback to improve a feature.
+      </p>
+      <p>
+        We use information that we collect, such as your email address, to interact with you directly.
+        For example, we may send you a verification email to confirm your email address or reset your password.
+        Or we may let you know about upcoming changes or improvements to our services.
+        And if you contact Cat Linker, we’ll keep a record of your request in order to help solve any issues you might be facing.
+      </p>
+      <p>
+        We use information to help improve the safety and reliability of our services.
+        This includes detecting, preventing, and responding to fraud, abuse, security risks and technical issues that could harm Cat Linker, our users or the public.
+        We use Google reCAPTCHA to analyse your activity to help us detect abuse such as spam and bots.
+      </p>
+      <p>
+        We’ll ask for your consent before using your information for a purpose that isn’t covered in this Privacy Policy.
+      </p>
+    </div>
+  </div>
+  <div class="section">
+    <div class="row">
+      <h4>Exporting & deleting your information</h4>
+      <p>
+        You can export a copy of content in your Cat Linker Account if you want to back it up or use it with a service outside of Cat Linker by <%= link_to "contacting support", contact_path(@support), class:"inline-link" %>.
+        Additionally if you would like to permanently remove your account together with any uploaded files out of the Cat Linker system you can use the controls in your 
+        <% if user_signed_in? %>
+          <%= link_to "profile settings", edit_user_registration_path, class:"inline-link" %>.
+        <% else %>
+          profile.
+        <% end %>
+      </p>
+    </div>
+  </div>
+  <div class="section">
+    <div class="row">
+      <h4>Controlling your information</h4>
+      <p>
+      There are other ways to control the information that Cat Linker collects whether or not you’re signed in to a Cat Linker Account, including:
+      <ul>
+        <li>
+          Browser settings: For example, you can configure your browser to indicate when Cat Linker has set a cookie in your browser.
+          You can also configure your browser to block all cookies from a specific domain or all domains.
+          But remember that our services rely on cookies to function properly.
+        </li>
+        <li>
+          Device-level settings: Your device may have controls that determine what information we collect.
+        </li>
+      </ul>
+      </p>
+    </div>
+  </div>
+  <div class="section">
+    <div class="row">
+      <h4>When you share your information</h4>
+      <p>
+        Our services let you share information with other people, any pictures that are uploaded are always publicly available together with your email.
+        Remember, when you share information publicly, your content may become accessible through search engines.
+      </p>
+    </div>
+  </div>
+  <div class="section">
+    <div class="row">
+      <h4>When Cat Linker shares your information</h4>
+      <p>
+      We do not share your personal information with companies, organisations or individuals outside of Cat Linker except in the following cases:
+      <ul>
+        <li>
+          With your consent
+        </li>
+        <li>
+          With domain administrators
+        </li>
+        <li>
+          For legal reasons
+        </li>
+      </ul>
+      </p>   
+      <p>
+        We may share non-personally identifiable information publicly and with our partners – such as publishers, advertisers, developers or rights holders.
+        For example, we may share information publicly to show trends about the general use of our services.
+      </p>
+    </div>
+  </div>
+  <div class="section">
+    <div class="row">
+    <h4>Our security measures to protect your information</h4>
+      <p>
+      We work hard to protect you and Cat Linker from unauthorised access, alteration, disclosure or destruction of information we hold, including:
+      <ul>
+        <li>
+          We use encryption to keep your data private while in transit
+        </li>
+        <li>
+          We review our information collection, storage and processing practices to prevent unauthorised access to our systems
+        </li>
+        <li>
+          We restrict access to personal information to contractors and agents who need that information in order to process it.
+          Anyone with this access is subject to strict contractual confidentiality obligations and may be disciplined or terminated if they fail to meet these obligations.
+        </li>
+      </ul>
+      </p>
+      <p>
+        We regularly review this Privacy Policy and make sure that we process your information in ways that comply with it.
+      </p>
+    </div>
+  </div>
+  <div class="section">
+    <div class="row">
+      <h4>Data transfers</h4>
+      <p>
+        Our content is hosted on servers around the world and your information may be processed on servers located outside of the country where you live.
+        Data protection laws vary among countries, with some providing more protection than others.
+        Regardless of where your information is processed, we apply the same protections described in this policy.
+      </p>
+      <p>
+        When we receive formal written complaints, we respond by contacting the person who made the complaint.
+        We work with the appropriate regulatory authorities, including local data protection authorities, to resolve any complaints regarding the transfer of your data that we cannot resolve with you directly.
+      </p>
+    </div>
+  </div>
+  <div class="section">
+    <div class="row">
+    <h4>European requirements</h4>
+    <p>
+      If European Union (EU) data protection law applies to the processing of your information, we provide the controls described in this policy so you can exercise your right to request access to, update, remove, and restrict the processing of your information.
+      You also have the right to object to the processing of your information or export your information to another service.
+    </p>
+    <p>
+      We process your information for the purposes described in this policy, based on the following legal grounds:
+      <ul>
+        <li>
+          With your consent
+        </li>
+        <li>
+          When we’re pursuing legitimate interests
+        </li>
+        <li>
+          When we’re providing a service
+        </li>
+        <li>
+          When we’re complying with legal obligations
+        </li>
+      </ul>
+    </p>
+    </div>
+  </div>
+  <div class="section">
+    <div class="row">
+    <h4>When this policy applies</h4>
+    <p>
+      This Privacy Policy applies to all of our services.
+    </p>
+    <p>
+      This Privacy Policy doesn’t apply to:
+      <ul>
+        <li>
+          The information practices of other companies and organisations that advertise our services
+        </li>
+        <li>
+          Services offered by other companies or individuals, including products or sites that may include Cat Linker services, be displayed to you in search results, or be linked from our services
+        </li>
+      </ul>
+    </p>
+    </div>
+  </div>
+  <div class="section">
+    <div class="row">
+      <h4>Changes to this policy</h4>
+      <p>
+        We change this Privacy Policy from time to time. 
+        We will not reduce your rights under this Privacy Policy without your explicit consent. 
+        We always indicate the date when the last changes were published. 
+        If changes are significant, we’ll provide a more prominent notice.
+      </p>
+    </div>
+  </div>
+</div>
