Added letsencrypt_heroku gem

--- a/app/javascript/stylesheets/modules/legal.scss
+++ b/app/javascript/stylesheets/modules/legal.scss
@@ -45,7 +45,7 @@
   font-size: 1.2em;
   background-color: $white;
   box-shadow: $z-depth-2;
-  padding: 15px;
+  padding: 15px 25px;
 
   span {
     position: relative;
