--- a/app/views/home/terms_of_service.html.erb
+++ b/app/views/home/terms_of_service.html.erb
@@ -152,6 +152,14 @@
   </div>
   <div class="section">
     <div class="row">
+      <h4>Limitation on Time to File Claims</h4>
+      <p>
+        Any cause of action or claim you may have arising out of or relating to these terms of use or the website must be commenced within one (1) year after the cause of action accrues, otherwise, such cause of action or claim is permanently barred.
+      </p>
+    </div>
+  </div>
+  <div class="section">
+    <div class="row">
       <h4>Business uses of our Services</h4>
       <p>
         If you are using our Services on behalf of a business, that business accepts these terms. It will hold harmless and indemnify Cat Linker and its affiliates from any claim, action or proceedings arising from or related to the use of the Services or violation of these terms, including any liability or expense arising from claims, losses, damages, judgements, litigation costs and legal fees.
