--- a/app/javascript/stylesheets/modules/form.scss
+++ b/app/javascript/stylesheets/modules/form.scss
@@ -692,7 +692,7 @@ button.btn-delete {
     }
 
     .google-logo {
-      width: .625em;
+      width: 0.6em;
       transform: scale(2.8);
       position: relative;
       right: 10px;
